# gitlab-cli

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gitlab_cli/: __main__.py  app.py  context.py  output.py  project.py
src/gitlab_cli/commands/: issues.py  jobs.py  mrs.py  pipelines.py  projects.py  releases.py  variables.py
src/gitlab_cli/formatters/: generic.py  issues.py  jobs.py  mrs.py  pipelines.py  projects.py  releases.py  variables.py
src/qodev_gitlab_cli/: __init__.py  __main__.py  app.py  context.py  output.py
src/qodev_gitlab_cli/commands/: __init__.py  issues.py  jobs.py  mrs.py  pipelines.py  projects.py  releases.py  variables.py
src/qodev_gitlab_cli/formatters/: __init__.py  generic.py  issues.py  jobs.py  mrs.py  pipelines.py  projects.py  releases.py  variables.py
tests/: conftest.py  test_commands.py  test_context.py  test_formatters.py  test_output.py  test_project.py
