[project]
name = "qodev-gitlab-cli"
version = "0.2.0"
description = "Agent-friendly CLI for the GitLab API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jan Scheffler", email = "jan.scheffler@qodev.ai" }]
license = { text = "MIT" }
keywords = ["gitlab", "cli", "api", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "cyclopts>=3.0",
    "rich>=13.0",
    "qodev-gitlab-api>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-mock>=3.15", "ruff>=0.15", "mypy>=1.13.0"]

[project.scripts]
qodev-gitlab = "qodev_gitlab_cli.app:main"

[project.urls]
Homepage = "https://github.com/qodevai/gitlab-cli"
Repository = "https://github.com/qodevai/gitlab-cli"
Issues = "https://github.com/qodevai/gitlab-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qodev_gitlab_cli"]

[tool.uv.sources]
qodev-gitlab-api = { path = "../../libs/gitlab" }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["qodev_gitlab_cli"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "qodev_gitlab_api.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cyclopts.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
